--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,25 +1,15 @@
 ---
 play_number: 1
-title: Understand what people need
+title: Work in the open
 ---
 
-We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the beginning. The needs of people — not constraints of government structures or silos — should inform technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
+When we collaborate in the open and publish our data publicly, we can improve Government together. By building services more openly and publishing open data, we simplify the public’s access to government services and information, allow the public to contribute easily, and enable reuse by entrepreneurs, nonprofits, other agencies, and the public.
 
-### Checklist
-1. Early in the project, spend time with current and prospective users of the service
-2. Use a range of qualitative and quantitative research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
-3. Test prototypes of solutions with real people, in the field if possible
-4. Document the findings about user goals, needs, behaviors, and preferences
-5. Share findings with the team and agency leadership
-6. Create a prioritized list of tasks the user is trying to accomplish, also known as "user stories"
-7. As the digital service is being built, regularly test it with potential users to ensure it meets people’s needs
+### Skills to work on
+1. Choose a permissive license approved by the OSI ([Open Source Initiative](https://opensource.org/)) such as the [MIT License](https://opensource.org/licenses/MIT)
+2. Leverage Github to publish code, track issues, and advertise product backlog
+3. For each repo, publish a simple and clear code of conduct, contribution guidelines, license, and security vulnerability disclosure process
+4. Adhere to the Official Languages Act: provide bilingual documentation, create bilingual templates for issues and pull requests, respond to issues in the language of the issue whenever possible
+5. Keep your artifacts and repositories clean and accurate: archive unmaintained repositories, delete stale and merged branches, remove old Pull Requests that will not be merged, regularly prune old issues
 
-### Key Questions
-- Who are your primary users?
-- What user needs will this service address?
-- Why does the user want or need this service?
-- Which people will have the most difficulty with the service?
-- Which research methods were used?
-- What were the key findings?
-- How were the findings documented? Where can future team members access the documentation?
-- How often are you testing with real people?
+
