--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,22 +1,20 @@
 ---
 play_number: 3
-title: Make it simple and intuitive
+title: Deploy often
 ---
 
-Using a government service shouldn’t be stressful, confusing, or daunting. It’s our job to build services that are simple and intuitive enough that users succeed the first time, unaided.
+Frequent deployment is valuable because it allows your users to get new features more rapidly, to give more rapid feedback on those features, and generally become more collaborative in the development cycle. This helps break down the barriers between users of our services and developers - which are the biggest barriers to successful software development.
 
-### Checklist
-1. Use a simple and flexible design style guide for the service. Use the [U.S. Web Design System](https://playbook.cio.gov/designstandards) as a default 
-2. Use the design style guide consistently for related digital services
-3. Give users clear information about where they are in each step of the process
-4. Follow accessibility best practices to ensure all people can use the service
-5. Provide users with a way to exit and return later to complete the process
-6. Use language that is familiar to the user and easy to understand
-7. Use language and design consistently throughout the service, including online and offline touch points
-
-### Key Questions
-- What primary tasks are the user trying to accomplish?
-- Is the language as plain and universal as possible?
-- What languages is your service offered in?
-- If a user needs help while using the service, how do they go about getting it?
-- How does the service’s design visually relate to other government services?
+### Skills to work on
+1. Deploy updated code into production environments multiple times a day in a structured and safe way. 
+1. Create environments through infrastructure as code
+1. Use hermetic builds via container images and store them in the Cloud
+1. Every application or system should have a release checklist or an agile release train defined
+1. Keep a release manifest file that links releases and component versions. Here is one simple example. 
+1. Automate your release notes
+1. Always provide a rollback play by play for each release
+1. Leverage a green/blue deployment
+1. If possible, use techniques to throttle traffic to the new release e.g. canary release
+1. Ensure each release candidate is properly tested (manually or automatically).  Testing should cover: unit tests, integration tests and performance tests.
+1. Ensure each release candidate has gone through a vulnerability scan
+1. Always verify/monitor production logs and key metrics right after a release
