--- a/_plays/07.md
+++ b/_plays/07.md
@@ -1,16 +1,14 @@
 ---
 play_number: 7
-title: Bring in experienced teams
+title: Choose the stack carefully
 ---
 
-We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
+The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud-based, and commodity solutions across the technology stack, because of their widespread adoption and support by successful consumer and enterprise technology companies in the private sector. 
 
-### Checklist
-1. Member(s) of the team have experience building popular, high-traffic digital services
-2. Member(s) of the team have experience designing mobile and web applications
-3. Member(s) of the team have experience using automated testing frameworks
-4. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment
-5. Member(s) of the team have experience securing digital services
-6. A Federal contracting officer is on the internal team if a third party will be used for development work
-7. A Federal budget officer is on the internal team or is a partner
-8. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner
+### Skills to work on
+
+1. Does the skills base of the community line up with the requirements of supporting the stack in the near and long term? 
+1. Is there sufficient maturity with the developer tooling on the stack?
+1. Have the maintenance needs of the stack been considered? Will customizations increase maintenance unnecessarily?
+1. Does the technology stack have reasonable security management / patching in place?
+1. Have additional technology dependencies been considered and rationalized?
