--- a/_plays/10.md
+++ b/_plays/10.md
@@ -1,26 +1,18 @@
 ---
 play_number: 10
-title: Automate testing and deployments
+title: Optimize the cloud’s cost
 ---
 
-Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times a day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance are still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
+Manage cloud expenses efficiently by understanding costs related to cloud to effectively measure and manage key cost contributors such as memory, storage, network traffic and instance utilization. 
 
-### Checklist
-1. Create automated tests that verify all user-facing functionality
-2. Create unit and integration tests to verify modules and components
-3. Run tests automatically as part of the build process
-4. Perform deployments automatically with deployment scripts, continuous delivery services, or similar techniques
-5. Conduct load and performance tests at regular intervals, including before public launch
+### Skills to work on
 
+1. Data transfer is optimized according to the needs of the application taking into consideration data centre region / zone cross-traffic. 
+1. Compute instances are right-sized for the task.
+1. High cost applications are profiled for cloud optimization
+1. Logging, monitoring & alerting for high load & spikes in traffic / cloud utilization is in place
+1. CDNs are leveraged where feasible
+1. Storage has predefined retention periods for disposal or archival
+1. Data availability and redundancy is right-sized according to SLAs
+1. Stop / delete instances & resources when they are not needed or by schedule if possible.
 
-### Key Questions
-- What percentage of the code base is covered by automated tests?
-- How long does it take to build, test, and deploy a typical bug fix?
-- How long does it take to build, test, and deploy a new feature into production?
-- How frequently are builds created?
-- What test tools are used?
-- Which deployment automation or continuous integration tools are used?
-- What is the estimated maximum number of concurrent users who will want to use the system?
-- How many simultaneous users could the system handle, according to the most recent capacity test?
-- How does the service perform when you exceed the expected target usage volume? Does it degrade gracefully or catastrophically?
-- What is your scaling strategy when demand increases suddenly?
