--- a/_plays/13.md
+++ b/_plays/13.md
@@ -1,24 +1,19 @@
 ---
 play_number: 13
-title: Default to open
+title: Security and privacy first
 ---
 
-When we collaborate in the open and publish our data publicly, we can improve Government together. By building services more openly and publishing open data, we simplify the public’s access to government services and information, allow the public to contribute easily, and enable reuse by entrepreneurs, nonprofits, other agencies, and the public.
+Our digital services have to protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. At the start of designing a new service or feature, the team lead should engage the appropriate privacy, security, and legal officer(s) to discuss the type of information collected, how it should be secured, how long it is kept, and how it may be used and shared. The sustained engagement of a privacy specialist helps ensure that personal data is properly managed. In addition, a key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
 
-### Checklist
-1. Offer users a mechanism to report bugs and issues, and be responsive to these reports
-2. Provide datasets to the public, in their entirety, through bulk downloads and APIs (application programming interfaces)
-3. Ensure that data from the service is explicitly in the public domain, and that rights are waived globally via an international public domain dedication, such as the “Creative Commons Zero” waiver
-4. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
-5. Ensure that we maintain the rights to all data developed by third parties in a manner that is releasable and reusable at no cost to the public
-6. Ensure that we maintain contractual rights to all custom software developed by third parties in a manner that is publishable and reusable at no cost
-7. When appropriate, create a versioned API for third parties and internal users to interact with the service directly
-8. When appropriate, publish source code of projects or components online
-9. When appropriate, share your development process and progress publicly
+### Skills to work on
 
-### Key Questions
-- How are you collecting user feedback for bugs and issues?
-- If there is an API, what capabilities does it provide? Is it versioned? Who uses it? How is it documented?
-- If the codebase has not been released under an open source license, explain why.
-- What components are made available to the public as open source?
-- What datasets are made available to the public?
+1. Static code liniting
+1. Secrets scanning
+1. Code dependency scanning
+1. Automatic patching
+1. ContainerDocker image vulnerability scanning
+1. HTTP header analysis
+1. TLS/SSL protocol and cipher suite analysis
+1. Shared secret management
+1. Infrastructure baseline configuration according to CIS benchmarks
+1. Vulnerability disclosure policies
