--- a/_plays/fr/04.md
+++ b/_plays/fr/04.md
@@ -1,11 +1,12 @@
 ---
-id: 4
-title: Build the service using agile and iterative practices
+_id: 4
+title: Construire le service en utilisant des pratiques agiles et itératives
 ---
 
 We should use an incremental, fast-paced style of software development to reduce the risk of failure. We want to get working software into users’ hands as early as possible to give the design and development team opportunities to adjust based on user feedback about the service. A critical capability is being able to automatically test and deploy the service so that new features can be added often and be put into production easily.
 
 ### Checklist
+
 1. Ship a functioning “minimum viable product” (MVP) that solves a core user need as soon as possible, no longer than three months from the beginning of the project, using a “beta” or “test” period if needed
 2. Run usability tests frequently to see how well the service works and identify improvements that should be made
 3. Ensure the individuals building the service communicate closely using techniques such as launch meetings, war rooms, daily standups, and team chat tools
@@ -16,8 +17,8 @@ We should use an incremental, fast-paced style of software development to reduce
 8. Give the entire project team access to the issue tracker and version control system
 9. Use code reviews to ensure quality
 
-
 ### Key Questions
+
 - How long did it take to ship the MVP? If it hasn't shipped yet, when will it?
 - How long does it take for a production deployment?
 - How many days or weeks are in each iteration/sprint?
