--- a/_plays/fr/05.md
+++ b/_plays/fr/05.md
@@ -1,6 +1,6 @@
 ---
-id: 5
-title: Structure budgets and contracts to support delivery
+_id: 5
+title: Structurer les budgets et les contrats pour soutenir l'exécution
 ---
 
 To improve our chances of success when contracting out development work, we need to work with experienced budgeting and contracting officers. In cases where we use third parties to help build a service, a well-defined contract can facilitate good development practices like conducting a research and prototyping phase, refining product requirements as the service is built, evaluating open source alternatives, ensuring frequent delivery milestones, and allowing the flexibility to purchase cloud computing resources.
@@ -8,6 +8,7 @@ To improve our chances of success when contracting out development work, we need
 [The TechFAR Handbook](https://playbook.cio.gov/techfar/) provides a detailed explanation of the flexibilities in the Federal Acquisition Regulation (FAR) that can help agencies implement this play.
 
 ### Checklist
+
 1. Budget includes research, discovery, and prototyping activities
 2. Contract is structured to request frequent deliverables, not multi-month milestones
 3. Contract is structured to hold vendors accountable to deliverables
@@ -19,6 +20,7 @@ To improve our chances of success when contracting out development work, we need
 9. Contract includes a transition of services period and transition-out plan
 
 ### Key Questions
+
 - What is the scope of the project? What are the key deliverables?
 - What are the milestones? How frequent are they?
 - What are the performance metrics defined in the contract (e.g., response time, system uptime, time period to address priority issues)?
