--- a/_plays/fr/07.md
+++ b/_plays/fr/07.md
@@ -1,11 +1,12 @@
 ---
-id: 7
-title: Bring in experienced teams
+_id: 7
+title: Faites appel à des équipes expérimentées
 ---
 
 We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
 
 ### Checklist
+
 1. Member(s) of the team have experience building popular, high-traffic digital services
 2. Member(s) of the team have experience designing mobile and web applications
 3. Member(s) of the team have experience using automated testing frameworks
