--- a/_plays/en/04.md
+++ b/_plays/en/04.md
@@ -7,4 +7,7 @@ Allows incomplete and untested code paths to be shipped to production as latent 
 
 ### Skills to work on
 
-1. Install or use an existing feature toggle platform 
+1. Install, implement or use an existing feature toggle platform 
+1. Practice writing code using [branch by abstraction](https://martinfowler.com/bliki/BranchByAbstraction.html)
+1. Deploy large feature in smaller pieces
+1. Avoid releasing new code outside business hours or just before the weekend or bank holidays
