--- a/_plays/en/06.md
+++ b/_plays/en/06.md
@@ -1,6 +1,6 @@
 ---
 _id: 6
-title: Get on-call right
+title: Get production support right
 ---
 
 Enjoy increased uptime, more customer satisfaction, and employees with a good work-life balance.
@@ -11,5 +11,6 @@ Enjoy increased uptime, more customer satisfaction, and employees with a good wo
 1. Store and document every incident 
 1. Define the severity levels
 1. Check-in regularly if the process is healthy and effective 
-1. Use a proper scheduling tool 
+1. Use a proper scheduling tool
+1. Every product team member should be part of the on-call schedule either as an [incident commander](https://www.atlassian.com/incident-management/incident-response/incident-commander) or an on-call developer 
 
