--- a/_plays/en/08.md
+++ b/_plays/en/08.md
@@ -8,5 +8,6 @@ Code is clean if it can be understood easily – by everyone on the team. Clean 
 
 ### Skills to work on
 
-1. Team defined code style. Every programming language has one. 
-1. Build automation supports static code analysis where possible
+1. Team chooses a code style. Every programming language has one and you should set on in.  
+1. Use static code analysis where possible
+1. Read [Clean Code: A Handbook of Agile Software Craftsmanship](https://www.amazon.ca/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882)
