--- a/_plays/en/11.md
+++ b/_plays/en/11.md
@@ -7,4 +7,11 @@ When moving fast we expect issues. We want to respond quickly, respond in a way 
 
 ### Skills to work on
 
-1. Define your peer review process and documentation. Start with a pull request template.
+1. Agree on what defines an incident and the different severity levels
+1. Define an incident runbook: provide a list of clear steps to follow when an incident happens - it will bring in consistency and sets a quality standard
+1. Always adopt a blameless approach and ensure psychology safety
+1. Eliminate noise or false positive as soon as possible
+1. Make your incident reports and action items visible
+1. Automate the process: opening a bridge, creating the report, following up on action items etc.
+1. Simplify communication channels
+
