--- a/_plays/en/13.md
+++ b/_plays/en/13.md
@@ -1,19 +1,17 @@
 ---
 _id: 13
-title: Security and privacy first
+title: Security first 
 ---
 
-Our digital services have to protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. At the start of designing a new service or feature, the team lead should engage the appropriate privacy, security, and legal officer(s) to discuss the type of information collected, how it should be secured, how long it is kept, and how it may be used and shared. The sustained engagement of a privacy specialist helps ensure that personal data is properly managed. In addition, a key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
+Our digital services have to protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. A key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
 
 ### Skills to work on
 
-1. Static code liniting
-1. Secrets scanning
-1. Code dependency scanning
-1. Automatic patching
-1. ContainerDocker image vulnerability scanning
-1. HTTP header analysis
-1. TLS/SSL protocol and cipher suite analysis
-1. Shared secret management
-1. Infrastructure baseline configuration according to CIS benchmarks
-1. Vulnerability disclosure policies
+1. Seek what security means for your organization and your application and prioritize it sooner in your product development
+1. Use a static code analysis tool to flag programming errors, bugs, stylistic errors, and suspicious constructs
+1. Use a secret scan (e.g. Git Seekret) to prevent adding sensitive information into a code repository
+1. Enable code dependency scanning and automatic patchinge.g. Snyk
+1. Publish vulnerability disclosure policies
+1. Enable ContainerDocker image vulnerability scanning
+1. Do a Risk/Threat Analysis consistently across products
+1. Use Shared secret management
