--- a/_plays/en/14.md
+++ b/_plays/en/14.md
@@ -3,11 +3,12 @@ _id: 14
 title: Sharpen your skills
 ---
 
-Preserving and enhancing the greatest asset you have - your coding craftsmanship.
+This final play focuses on practicing all the above plays and enhancing them. Our coding craftsmanship is our greatest asset - we need to continuously improve it. 
 
 ### Skills to work on
 
-1. Participate to at least one code retreat each year
+1. Participate to at least one [code retreat](https://www.coderetreat.org/) each year
 1. Review Pull Requests from other teams
 1. Read & share insightful technical blogs & news across the community
 1. Step outside of your comfort zone when the opportunity presents itself
+1. Pick a skill and master it with deep understanding
