--- a/_plays/en/02.md
+++ b/_plays/en/02.md
@@ -3,10 +3,10 @@ _id: 2
 title: Continuously Integrate
 ---
 
-The greatest and most wide ranging benefit of Continuous Integration is reduced risk. It also allows you to detect issues sooner. It is a fail-fast mechanism and removes one of the biggest barriers to frequent deployment.
+The greatest and most wide ranging benefit of continuous integration is reduced risk. It allows you to detect issues sooner. It is a fail-fast mechanism and removes one of the biggest barriers to frequent deployment.
 
 ### Skills to work on
 1. Integrate changes into a mainline as early as possible. 
-1. Define your peer review process and documentation. Start with a pull request template. Run code reviews like a human. 
-1. Use SemVer to version your changes
-1. Enforce Conventional Commits. See why.
+1. Define your peer review process and documentation. Start with a pull request template. Run code [reviews like a human](https://docs.google.com/presentation/d/1UH54tttzSWPNwiUQpwi6Wc5nk3PCGtypb_ATOs0z0Ow/edit#slide=id.g7f7a437dc1_0_88). 
+1. Use [SemVer](https://semver.org/) to version your changes
+1. Enforce [Conventional Commits](https://www.conventionalcommits.org/). See [why](https://www.conventionalcommits.org/en/v1.0.0/#why-use-conventional-commits).
