--- a/_plays/en/07.md
+++ b/_plays/en/07.md
@@ -7,8 +7,8 @@ The technology decisions we make need to enable development teams to work effici
 
 ### Skills to work on
 
-1. Does the skills base of the community line up with the requirements of supporting the stack in the near and long term? 
-1. Is there sufficient maturity with the developer tooling on the stack?
-1. Have the maintenance needs of the stack been considered? Will customizations increase maintenance unnecessarily?
-1. Does the technology stack have reasonable security management / patching in place?
-1. Have additional technology dependencies been considered and rationalized?
+1. Ensure the skills base of the community line up with the requirements of supporting the stack in the near and long term
+1. Assess the sufficient maturity with the developer tooling on the stack
+1. Assess the technology stack has reasonable security management and patching in place
+1. Review and rationalize additional technology dependencies
+
