--- a/_plays/en/09.md
+++ b/_plays/en/09.md
@@ -8,4 +8,4 @@ Building accessible services means meeting the needs of as many people as possib
 ### Skills to work on
 
 1. Ensure every UI component is accessible; refer to our guide https://digital.canada.ca/a11y/ 
-1. Perform automated accessibility scans during end to end automated tests using axe-core integration with Cypress
+1. Perform automated accessibility scans during end to end automated tests using [axe-core integration with Cypress](https://www.deque.com/blog/how-to-test-for-accessibility-with-cypress/)
