--- a/_plays/en/02.md
+++ b/_plays/en/02.md
@@ -1,6 +1,6 @@
 ---
 _id: 2
-title: Continuously Integrate
+title: Continuously integrate
 ---
 
 The greatest and most wide ranging benefit of continuous integration is reduced risk. It allows you to detect issues sooner. It is a fail-fast mechanism and removes one of the biggest barriers to frequent deployment.
