--- a/_plays/en/05.md
+++ b/_plays/en/05.md
@@ -1,6 +1,6 @@
 ---
 _id: 5
-title: Log, Monitor and Alert
+title: Log, monitor and alert
 ---
 
 Logging, monitoring & alerting are the bedrock of incident management. Developers and operations teams will be able to plan for and troubleshoot application issues much faster.
