--- a/_plays/en/03.md
+++ b/_plays/en/03.md
@@ -12,7 +12,7 @@ Frequent deployment is valuable because it allows your users to get new features
 1. Every application or system should have a release checklist or an [agile release train](https://www.scaledagileframework.com/agile-release-train/) process defined. Read about our release management practice [here](https://cds-snc.github.io/guide-product-teams-equipes-produits/release-management-responsibilities/).
 1. Keep a [release manifest file](https://dzone.com/articles/release-snapshots-smart) that links releases and component versions. Here is one [example](https://github.com/cds-snc/c19-benefits-manifest/blob/master/manifest.json). 
 1. Automate your release notes
-1. Provide a rollback play by play for each release
+1. Provide a rollback plan for each release
 1. Leverage a [green/blue deployment](https://martinfowler.com/bliki/BlueGreenDeployment.html)
 1. If possible, use techniques to throttle traffic to the new release e.g. [canary release](https://martinfowler.com/bliki/CanaryRelease.html)
 1. Ensure each release candidate is properly tested (manually or automatically).  Testing should cover: unit tests, integration tests and performance tests.
