--- a/_plays/en/08.md
+++ b/_plays/en/08.md
@@ -1,6 +1,6 @@
 ---
 _id: 8
-title: Write Clean Code
+title: Write clean code
 ---
 
 Code is clean if it can be understood easily – by everyone on the team. Clean code can be read and enhanced by a developer other than its original author. With understandability comes readability, changeability, extensibility and maintainability.
