--- a/_plays/en/04.md
+++ b/_plays/en/04.md
@@ -3,7 +3,7 @@ _id: 4
 title: Use feature toggles
 ---
 
-Allows incomplete and untested code paths to be shipped to production as latent code and turned on when the new feature is ready. Using Release Toggles in this way is the most common way to implement the Continuous Delivery principle of "separating *feature* release from *code* deployment."
+Feature toggles aka release toggles allow incomplete and untested code paths to be shipped to production as latent code and turned on when the new feature is ready. Using release toggles in this way is the most common way to implement the continuous delivery principle of "separating *feature* release from *code* deployment."
 
 ### Skills to work on
 
