--- a/_plays/en/05.md
+++ b/_plays/en/05.md
@@ -1,18 +1,14 @@
 ---
 _id: 5
-title: Log, monitor and alert
+title: Choose the stack carefully
 ---
 
-Logging, monitoring & alerting are the bedrock of incident management. Developers and operations teams will be able to plan for and troubleshoot application issues much faster.
+The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud-based, and commodity solutions across the technology stack, because of their widespread adoption and support by successful consumer and enterprise technology companies in the private sector. 
 
 ### Skills to work on
 
-1. Logs are collected and stored in a central location
-1. Auditable events such as logins, failed logins, and high-value transactions are logged
-1. Warnings and errors generate adequate and clear log messages.
-1. Logs of applications and APIs are monitored for suspicious activity.
-1. Logs should be collected in a centralized location
-1. Appropriate alerting thresholds and response escalation processes are in place.
-1. The application is able to detect, escalate or alert for active incidents & threats in real time or near real time.
-1. Logs are held for sufficient retention periods to allow for delayed analysis.
-1. Logs are generated in a format that can be easily consumed by a centralized log management solution  i.e. use structured logging
+1. Ensure the skills base of the community line up with the requirements of supporting the stack in the near and long term
+1. Assess the sufficient maturity with the developer tooling on the stack
+1. Assess the technology stack has reasonable security management and patching in place
+1. Review and rationalize additional technology dependencies
+
