--- a/_plays/en/06.md
+++ b/_plays/en/06.md
@@ -1,16 +1,17 @@
 ---
 _id: 6
-title: Get production support right
+title: Security first 
 ---
 
-Enjoy increased uptime, more customer satisfaction, and employees with a good work-life balance.
+Our digital services have to protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. A key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
 
 ### Skills to work on
 
-1. Provide on-call training and a rich knowledge base
-1. Store and document every incident 
-1. Define the severity levels
-1. Check-in regularly if the process is healthy and effective 
-1. Use a proper scheduling tool
-1. Every product team member should be part of the on-call schedule either as an [incident commander](https://www.atlassian.com/incident-management/incident-response/incident-commander) or an on-call developer 
-
+1. Seek what security means for your organization and your application and prioritize it sooner in your product development
+1. Use a static code analysis tool to flag programming errors, bugs, stylistic errors, and suspicious constructs
+1. Use a secret scan (e.g. Git Seekret) to prevent adding sensitive information into a code repository
+1. Enable code dependency scanning and automatic patchinge.g. Snyk
+1. Publish vulnerability disclosure policies
+1. Enable ContainerDocker image vulnerability scanning
+1. Do a Risk/Threat Analysis consistently across products
+1. Use Shared secret management
