--- a/_plays/en/07.md
+++ b/_plays/en/07.md
@@ -1,14 +1,13 @@
 ---
 _id: 7
-title: Choose the stack carefully
+title: Write clean code
 ---
 
-The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud-based, and commodity solutions across the technology stack, because of their widespread adoption and support by successful consumer and enterprise technology companies in the private sector. 
+Code is clean if it can be understood easily – by everyone on the team. Clean code can be read and enhanced by a developer other than its original author. With understandability comes readability, changeability, extensibility and maintainability.
+
 
 ### Skills to work on
 
-1. Ensure the skills base of the community line up with the requirements of supporting the stack in the near and long term
-1. Assess the sufficient maturity with the developer tooling on the stack
-1. Assess the technology stack has reasonable security management and patching in place
-1. Review and rationalize additional technology dependencies
-
+1. Team chooses a code style. Every programming language has one and you should set on in.  
+1. Use static code analysis where possible
+1. Read [Clean Code: A Handbook of Agile Software Craftsmanship](https://www.amazon.ca/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882)
