--- a/_plays/en/08.md
+++ b/_plays/en/08.md
@@ -1,13 +1,11 @@
 ---
 _id: 8
-title: Write clean code
+title: Develop accessible front-end 
 ---
 
-Code is clean if it can be understood easily – by everyone on the team. Clean code can be read and enhanced by a developer other than its original author. With understandability comes readability, changeability, extensibility and maintainability.
-
+Building accessible services means meeting the needs of as many people as possible. From the start, we work with the people who will use a product, including people with disabilities.
 
 ### Skills to work on
 
-1. Team chooses a code style. Every programming language has one and you should set on in.  
-1. Use static code analysis where possible
-1. Read [Clean Code: A Handbook of Agile Software Craftsmanship](https://www.amazon.ca/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882)
+1. Ensure every UI component is accessible; refer to our guide https://digital.canada.ca/a11y/ 
+1. Perform automated accessibility scans during end to end automated tests using [axe-core integration with Cypress](https://www.deque.com/blog/how-to-test-for-accessibility-with-cypress/)
