--- a/_plays/en/09.md
+++ b/_plays/en/09.md
@@ -1,11 +1,17 @@
 ---
 _id: 9
-title: Develop accessible front-end 
+title: Automate all tests
 ---
 
-Building accessible services means meeting the needs of as many people as possible. From the start, we work with the people who will use a product, including people with disabilities.
+All code written should include reasonable tests to ensure functionality and to demonstrate consideration of edge cases. Test automation guarantees quality and reliability for every application deployment and increases overall software development efficiency.
 
 ### Skills to work on
 
-1. Ensure every UI component is accessible; refer to our guide https://digital.canada.ca/a11y/ 
-1. Perform automated accessibility scans during end to end automated tests using [axe-core integration with Cypress](https://www.deque.com/blog/how-to-test-for-accessibility-with-cypress/)
+1. Treat your test code as production code
+1. Writing tests should be part of your acceptance criteria and pull request
+1. Manual testing should be kept to a minimum
+1. Pick testing libraries that help with code coverage, reporting and test code readability 
+1. Leverage mocking interfaces to test internal logic
+1. Ensure to include some end to end testings when possible
+
+
