--- a/_plays/en/12.md
+++ b/_plays/en/12.md
@@ -1,17 +1,16 @@
 ---
 _id: 12
-title: Automate all tests
+title: Get production support right
 ---
 
-All code written should include reasonable tests to ensure functionality and to demonstrate consideration of edge cases. Test automation guarantees quality and reliability for every application deployment and increases overall software development efficiency.
+Enjoy increased uptime, more customer satisfaction, and employees with a good work-life balance.
 
 ### Skills to work on
 
-1. Treat your test code as production code
-1. Writing tests should be part of your acceptance criteria and pull request
-1. Manual testing should be kept to a minimum
-1. Pick testing libraries that help with code coverage, reporting and test code readability 
-1. Leverage mocking interfaces to test internal logic
-1. Ensure to include some end to end testings when possible
-
+1. Provide on-call training and a rich knowledge base
+1. Store and document every incident 
+1. Define the severity levels
+1. Check-in regularly if the process is healthy and effective 
+1. Use a proper scheduling tool
+1. Every product team member should be part of the on-call schedule either as an [incident commander](https://www.atlassian.com/incident-management/incident-response/incident-commander) or an on-call developer 
 
