--- a/_plays/en/13.md
+++ b/_plays/en/13.md
@@ -1,17 +1,17 @@
 ---
 _id: 13
-title: Security first 
+title: Manage incident
 ---
 
-Our digital services have to protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. A key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
+When moving fast we expect issues. We want to respond quickly, respond in a way that doesn’t make the issue bigger and not repeat the same problems so that our users are able to get services.
 
 ### Skills to work on
 
-1. Seek what security means for your organization and your application and prioritize it sooner in your product development
-1. Use a static code analysis tool to flag programming errors, bugs, stylistic errors, and suspicious constructs
-1. Use a secret scan (e.g. Git Seekret) to prevent adding sensitive information into a code repository
-1. Enable code dependency scanning and automatic patchinge.g. Snyk
-1. Publish vulnerability disclosure policies
-1. Enable ContainerDocker image vulnerability scanning
-1. Do a Risk/Threat Analysis consistently across products
-1. Use Shared secret management
+1. Agree on what defines an incident and the different severity levels
+1. Define an incident runbook: provide a list of clear steps to follow when an incident happens - it will bring in consistency and sets a quality standard
+1. Always adopt a blameless approach and ensure psychology safety
+1. Eliminate noise or false positive as soon as possible
+1. Make your incident reports and action items visible
+1. Automate the process: opening a bridge, creating the report, following up on action items etc.
+1. Simplify communication channels
+
