--- a/_plays/en/01.md
+++ b/_plays/en/01.md
@@ -8,7 +8,7 @@ When we collaborate in the open and publish our data publicly, we can improve Go
 ### Skills to work on
 1. Choose a permissive license approved by the [Open Source Initiative](https://opensource.org/) such as the [MIT License](https://opensource.org/licenses/MIT)
 2. Leverage [Github](https://www.github.com/) to publish code, track issues, and share the product backlog
-3. For each code repository, publish a simple and clear [code of conduct](https://github.com/cds-snc/.github/blob/master/CODE_OF_CONDUCT.md), contribution guidelines, [license](https://github.com/cds-snc/.github/blob/master/LICENSE), and [security vulnerability disclosure process](https://github.com/cds-snc/.github/blob/master/SECURITY.md)
+3. For each code repository, publish a simple and clear [code of conduct](https://github.com/cds-snc/.github/blob/master/CODE_OF_CONDUCT.md), [contribution guidelines](https://github.com/cds-snc/.github/blob/master/CONTRIBUTING.md), [license](https://github.com/cds-snc/.github/blob/master/LICENSE), and [security vulnerability disclosure process](https://github.com/cds-snc/.github/blob/master/SECURITY.md)
 4. Adhere to the [Official Languages Act](https://laws-lois.justice.gc.ca/eng/acts/o-3.01/FullText.html): provide bilingual documentation, create bilingual templates for issues and pull requests, respond to issues in the language of the issue whenever possible
 5. Keep your artifacts and repositories clean and accurate: archive unmaintained repositories, delete stale and merged branches, remove old Pull Requests that will not be merged, regularly prune old issues
 
