--- a/_plays/en/11.md
+++ b/_plays/en/11.md
@@ -1,17 +1,18 @@
 ---
 _id: 11
-title: Manage incident
+title: Log, monitor and alert
 ---
 
-When moving fast we expect issues. We want to respond quickly, respond in a way that doesn’t make the issue bigger and not repeat the same problems so that our users are able to get services.
+Logging, monitoring & alerting are the bedrock of incident management. Developers and operations teams will be able to plan for and troubleshoot application issues much faster.
 
 ### Skills to work on
 
-1. Agree on what defines an incident and the different severity levels
-1. Define an incident runbook: provide a list of clear steps to follow when an incident happens - it will bring in consistency and sets a quality standard
-1. Always adopt a blameless approach and ensure psychology safety
-1. Eliminate noise or false positive as soon as possible
-1. Make your incident reports and action items visible
-1. Automate the process: opening a bridge, creating the report, following up on action items etc.
-1. Simplify communication channels
-
+1. Logs are collected and stored in a central location
+1. Auditable events such as logins, failed logins, and high-value transactions are logged
+1. Warnings and errors generate adequate and clear log messages
+1. Logs of applications and APIs are monitored for suspicious activity
+1. Logs should be collected in a centralized location
+1. Appropriate alerting thresholds and response escalation processes are in place
+1. The application is able to detect, escalate or alert for active incidents & threats in real time or near real time
+1. Logs are held for sufficient retention periods to allow for delayed analysis
+1. Logs are generated in a format that can be easily consumed by a centralized log management solution  i.e. implement structured logging
