--- a/_plays/en/05.md
+++ b/_plays/en/05.md
@@ -7,7 +7,7 @@ The technology decisions we make need to enable development teams to work effici
 
 ### Skills to work on
 
-1. Ensure the skills base of the community line up with the requirements of supporting the stack in the near and long term
+1. Ensure the skills of the community line up with the requirements of supporting the stack in the near and long term
 1. Assess the sufficient maturity with the developer tooling on the stack
 1. Assess the technology stack has reasonable security management and patching in place
 1. Review and rationalize additional technology dependencies
