--- a/_plays/en/11.md
+++ b/_plays/en/11.md
@@ -3,7 +3,7 @@ _id: 11
 title: Log, monitor and alert
 ---
 
-Logging, monitoring & alerting are the bedrock of incident management. Developers and operations teams will be able to plan for and troubleshoot application issues much faster.
+Logging, monitoring and alerting are the bedrock of incident management. Developers and operations teams will be able to plan for and troubleshoot application issues much faster.
 
 ### Skills to work on
 
