--- a/_plays/en/13.md
+++ b/_plays/en/13.md
@@ -13,5 +13,5 @@ When moving fast we expect issues. We want to respond quickly, respond in a way 
 1. Eliminate noise or false positive as soon as possible
 1. Make your incident reports and action items visible
 1. Automate the process: opening a bridge, creating the report, following up on action items etc.
-1. Simplify communication channels
+1. Clarify and simplify the communication channels when incidents occur
 
