--- a/_plays/en/10.md
+++ b/_plays/en/10.md
@@ -3,16 +3,16 @@ _id: 10
 title: Optimize the cloud’s cost
 ---
 
-Manage cloud expenses efficiently by understanding costs related to cloud to effectively measure and manage key cost contributors such as memory, storage, network traffic and instance utilization. 
+Cloud computing costs can quickly start to add up if your organization doesn't stay on top of them. Manage cloud expenses efficiently by measuring and managing key cost contributors such as memory, storage, network traffic and instance utilization.
 
 ### Skills to work on
 
-1. Data transfer is optimized according to the needs of the application taking into consideration data centre region / zone cross-traffic. 
-1. Compute instances are right-sized for the task.
+1. Data transfer is optimized according to the needs of the application taking into consideration data centre region and zone cross-traffic 
+1. Compute instances are right-sized for the task
 1. High cost applications are profiled for cloud optimization
-1. Logging, monitoring & alerting for high load & spikes in traffic / cloud utilization is in place
+1. Logging, monitoring and alerting for high load in traffic / cloud utilization is in place
 1. CDNs are leveraged where feasible
 1. Storage has predefined retention periods for disposal or archival
 1. Data availability and redundancy is right-sized according to SLAs
-1. Stop / delete instances & resources when they are not needed or by schedule if possible.
+1. Delete instances and resources when they are not needed or by schedule if possible.
 
