--- a/_plays/en/12.md
+++ b/_plays/en/12.md
@@ -12,5 +12,5 @@ A fair on-call schedule, coupled with an on-call compensation plan, can even fos
 1. Clearly define the on-call responsibilities, provide on-call training and access to all needed tools
 1. Implement a rich knowledge base and document every incident 
 1. Check-in regularly if the process is healthy and effective 
-1. Building an effective on-call schedule. Use the right tool; we use OpsGenie
+1. Build an effective on-call schedule. Use the right tool; we use OpsGenie
 1. Every product team member should be part of the on-call schedule either as an incident commander or an on-call developer
